@@ -31,7 +31,48 @@
 #include <Rmath.h>
 #include <direct.h>
 #define WIN32_LEAN_AND_MEAN 1
+/* Eventually #define _WIN32_WINNT 0x0502 for SetDllDirectoryA */
 #include <windows.h>
+
+/* SetDllDirectory is supported under XP SP1 and later.
+   If called with a non-NULL argument it sets the argument to be
+   the second item on the DLL search path (after the application
+   launch directory).  This is removed if called with NULL.
+
+   Prior to XP SP1 the second item was the current directory, but this
+   has (by default, 'safe DLL search mode') been moved below the
+   Windows dirs.  Using SetDllDirectory removes it altogether.
+
+   We fudge this via the current directory in earlier systems.
+ */
+typedef BOOL(WINAPI *PSDD)(LPCTSTR);
+
+int setDLLSearchPath(const char *path)
+{
+    int res = 0; /* failure */
+    PSDD p = (PSDD)-1;
+    static char wd[MAX_PATH] = ""; /* stored real current directory */
+
+    if (p == (PSDD)-1)
+        p = (PSDD)GetProcAddress(GetModuleHandle(TEXT("kernel32.dll")), "SetDllDirectoryA");
+    if (p)
+    {
+        res = p(path);
+    }
+    else
+    { /* Windows 2000 */
+        if (path)
+        {
+            GetCurrentDirectory(MAX_PATH, wd);
+        }
+        else if (wd[0])
+        {
+            SetCurrentDirectory(wd);
+            wd[0] = '\0';
+        }
+    }
+    return res;
+}
 
 #include <R_ext/Rdynload.h>
 #include <Rdynpriv.h>
@@ -49,7 +90,7 @@ static void fixPath(char *path)
             *p = '/';
 }
 
-static HINSTANCE R_loadLibrary(const char *path, int asLocal, int now);
+static HINSTANCE R_loadLibrary(const char *path, int asLocal, int now, const char *search);
 static DL_FUNC getRoutine(DllInfo *info, char const *name);
 static void R_deleteCachedSymbols(DllInfo *dll);
 
@@ -102,14 +143,19 @@ _CRTIMP unsigned int __cdecl _clearfp(void);
 #define _MCW_PC 0x00030000 /* Precision */
 #endif
 
-HINSTANCE R_loadLibrary(const char *path, int asLocal, int now)
+HINSTANCE R_loadLibrary(const char *path, int asLocal, int now, const char *search)
 {
     HINSTANCE tdlh;
     unsigned int dllcw, rcw;
+    int useSearch = search && search[0];
 
     rcw = _controlfp(0, 0) & ~_MCW_IC; /* Infinity control is ignored */
     _clearfp();
+    if (useSearch)
+        setDLLSearchPath(search);
     tdlh = LoadLibrary(path);
+    if (useSearch)
+        setDLLSearchPath(NULL);
     dllcw = _controlfp(0, 0) & ~_MCW_IC;
     if (dllcw != rcw)
     {
