@@ -1118,11 +1118,12 @@ installer and install them.
 
 Alternatively, if you have the environment variable @env{MY_TCLTK} set
 to a non-empty value, it is assumed that you want to use a different
-Tcl/Tk 8.5.x installation, and that this is set up correctly (with the
-DLLs in your path and @env{TCL_LIBRARY} set if needed).  In that case
-you do not need the Tcl/Tk support files installed (but they can be).
-Note that you do need 8.5.x and not 8.4.x.  (If you build R from the
-sources yourself you can configure it to use 8.4.x.)
+Tcl/Tk 8.5.x installation with the path to its @file{bin} directory
+given by value of @env{MY_TCLTK}, and that this is set up correctly
+(with @env{TCL_LIBRARY} set if needed).  In that case you do not need
+the Tcl/Tk support files installed (but they can be).  Note that you do
+need 8.5.x and not 8.4.x.  (If you build R from the sources yourself you
+can configure it to use 8.4.x.)
 
 
 @node  Hyperlinks in HTML do not work., update.packages() fails, Package TclTk does not work., Packages
