@@ -630,7 +630,7 @@ attribute_hidden FUNTAB R_FunTab[] = {
     {".External.graphics", do_Externalgr, 0, 1, -1, {PP_FOREIGN, PREC_FN, 0}},
     {".Call.graphics", do_dotcallgr, 0, 1, -1, {PP_FOREIGN, PREC_FN, 0}},
     {"recordGraphics", do_recordGraphics, 0, 211, 3, {PP_FOREIGN, PREC_FN, 0}},
-    {"dyn.load", do_dynload, 0, 111, 3, {PP_FUNCALL, PREC_FN, 0}},
+    {"dyn.load", do_dynload, 0, 111, 4, {PP_FUNCALL, PREC_FN, 0}},
     {"dyn.unload", do_dynunload, 0, 111, 1, {PP_FUNCALL, PREC_FN, 0}},
     {"ls", do_ls, 1, 11, 2, {PP_FUNCALL, PREC_FN, 0}},
     {"typeof", do_typeof, 1, 11, 1, {PP_FUNCALL, PREC_FN, 0}},
