@@ -199,6 +199,9 @@ NEW FEATURES
 	wider: it includes Unicode space characters on Windows and in
 	UTF-8 locales on machines which use Unicode wide characters.
 
+    o	dyn.load() gains a 'DLLpath' to specify the path for dependent
+	DLLs: currrently only used on Windows.
+
 
 DEPRECATED & DEFUNCT
 
